<resources>
    <string name="app_name">仿朋友圈</string>
    <string name="back">返回</string>
    <string name="title_album">选择图片</string>
    <string name="checkPhoto">确认(%1$d/%2$d)</string>
    <string name="photoNum">数量:%1$s</string>
    <string name="albumFolder">%s&#160;></string>
    <string name="imageDesc">图片</string>
    <string name="titleCircle">朋友圈</string>
    <string name="send">发送</string>
</resources>
