<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.xg.circle.activity.CircleActivity">

    <RelativeLayout
        android:id="@+id/relAlbumTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tvBack"
            style="@style/text_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="onClick"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/back" />

        <TextView
            style="@style/text_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/titleCircle" />

        <ImageView
            android:id="@+id/imgCheckPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:clickable="true"
            android:onClick="onClick"
            android:src="@drawable/nav_photograph" />
    </RelativeLayout>

    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relAlbumTitle"
        android:divider="@null"
        android:dividerHeight="0dp" />

    <LinearLayout
        android:id="@+id/linEditBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#f6f6f6"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/etEditBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="说点什么..." />

        <Button
            android:id="@+id/btnEditBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_size_five"
            android:background="@drawable/selector_btn_blue"
            android:text="@string/send"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_eighteen" />
    </LinearLayout>
</RelativeLayout>
